--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
  <div class="bg-bg-gray-p p-4 rounded-md xl:bg-transparent xl-p-3">
         <div class="relative">
           <img src="./images/brush.png" class="absolute   -left-2 opacity-70 " alt="">
-          <h3 class="font-lato text-2xl italic  text-main-red">Notre mission</h3>
+          <h3 class="font-lato text-2xl italic  text-main-red md:text-3xl">Notre mission</h3>
         </div>
         
-            <p class="mt-4">
+            <p class="mt-6">
                 Bureau d’études indépendant, le cabinet intervient au soutien des <b>entreprises, collectivités publiques, tribunaux </b> en qualité d’ingénieur conseil. 
                 Le cabinet intervient également dans le cadre d’expertises amiables ou judiciaires (résolution de litiges, recherche de solutions, calculs d’indemnités et de préjudices).
             </p>
@@ -196,11 +196,11 @@
        <div class="bg-bg-gray-p p-4 rounded-md xl:bg-transparent xl-p-3">
         <div class="relative">
             <img src="./images/brush.png" class="absolute z-40 -left-2 opacity-70 " alt="">
-            <h3 class="font-lato text-2xl italic  text-main-red">Notre expertise</h3>
+            <h3 class="relative font-lato text-2xl italic z-20  text-main-red md:text-3xl">Notre expertise</h3>
         </div>
         <div class="relative">
                  <img src="./images/petit-logo-cimes-conseil.png" class="hidden absolute z-10 w-2/3  bottom-0 right-20 opacity-40 xl:block" alt="logo du site cimes conseil">
-            <p class="mt-4 relative z-20">
+            <p class="mt-6 relative z-20">
                 <b>Implanté en Savoie</b>, le cabinet est expérimenté dans les projets et opérations en territoires de montagne. Les prestations sont calibrées aux besoins du client dans des démarches pragmatiques et orientées solutions.
             </p >
            <h2 class="absolute hidden text-quote-red text-3xl italic opacity-60 -bottom-24 left-12 text-center font-light xl:block">"Cabinet implanté en Savoie<br> depuis 20 ans"</h2>
