--- a/html/services.html
+++ b/html/services.html
@@ -242,7 +242,7 @@ Le cabinet veille à <b>l’optimisation budgétaire</b> de vos projets via la p
                       </div> 
                     <ul class="text-white leading-loose ml-4">
                         <li>
-                            <a href="#top" class="text-base font ">Accueil</a>
+                            <a href="../index.html#top" class="text-base font ">Accueil</a>
                            
                         </li>
                         <li>
