--- a/index.html
+++ b/index.html
@@ -320,9 +320,25 @@
     </div>
    </div>
    
+</section>
 
 
-</section> 
+<!-- section confiance -->
+<section class="w-full hidden py-16 mt-14 bg-gray-100 text-gray-600 xl:block">
+  <div class="max-w-6xl mx-auto text-center">
+      <h3 class="text-4xl  italic  text-quote-red mb-6">
+        "Ils nous ont fait confiance"
+      </h3>
+
+      <p class="text-2xl text-gr mt-6 font-medium">
+        Architectes · Promoteurs · Collectivités publiques · Tribunaux · Entreprises · Industries
+      </p>
+  </div>
+</section>
+
+
+
+< 
 <!-- section domaines d'activité -->
 <section class="mt-14 text-gray-600  ">
   <div class="mx-auto max-w-6xl px-2 pt-6 pb-14 xl:pb-22 md:px-6 ">
