--- a/html/services.html
+++ b/html/services.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="../dist/style.css" rel="stylesheet">
+    <link rel="icon" href="/images/petit-logo-cimes-conseil.png" type="image/png">
+<link rel="apple-touch-icon" href="/images/petit-logo-cimes-conseil.png">
 </head>
 <body id="top" class="font-lato">
     <!-- Header -->
