--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                       </div> 
                     <ul class="text-white leading-loose ml-4">
                         <li>
-                            <a href="#top" class="text-base font ">Accueil</a>
+                            <a href="./index.html#top" class="text-base font ">Accueil</a>
                            
                         </li>
                         <li>
