--- a/html/services.html
+++ b/html/services.html
@@ -152,7 +152,12 @@
      
     </div>
 
-     <div class="grid   grid-cols-1 md:grid-cols-2  mt-12 gap-x-12 xl:gap-x-18 gap-y-16 ">
+    <!-- grilles services -->
+
+     <div class="grid bg-bg-gray-p rounded-md p-2   grid-cols-1  md:grid-cols-[1fr_auto_1fr]   mt-12 gap-x-12 xl:gap-x-14 gap-y-16 ">
+
+
+        <!-- colonne expertise  -->
  <div id="expertise" class="bg-bg-gray-p p-5 rounded-md ">
         <div class="relative">
           <img src="../images/brush.png" class="absolute   -left-2 opacity-70 " alt="coup de pinceau">
@@ -186,6 +191,13 @@ Il est notamment possible de développer des modèles de <b>répartition des res
             </p>
       </div>
 
+
+
+<!-- ligne de séparation des colonnes -->
+
+ <div class="hidden  md:block border-l-4 border-dotted border-gray-300 h-5/6 my-auto "></div>
+
+ <!-- colonne ingenierie -->
        <div id="ingenierie" class="bg-bg-gray-p p-5 rounded-md  ">
         <div class="relative">
             <img src="../images/brush.png" class="absolute z-40 -left-2 opacity-70 " alt="coup de pinceau">
