--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@
 <section class="w-full  py-12 mt-8 bg-gray-200 text-gray-600 xl:block">
   <div class="relative max-w-6xl mx-auto text-center px-4">
    
-      <h3 class="text-3xl  italic font font-semibold   mb-6 md:text-4xl">
+      <h3 class="text-3xl  italic font font-semibold   mb-6 md:text-5xl">
         Ils nous ont fait confiance 
       </h3>
         
-      <p class="text-xl  text-main-blue mt-8 font-medium md:text-2xl">
+      <p class="text-xl  text-main-blue mt-8 font-medium md:text-[28px]">
         Architectes · Promoteurs · Collectivités publiques · Tribunaux · Entreprises · Industries
       </p>
          <img src="./images/petit-logo-cimes-conseil.png" alt="logo cimes conseil"  class="mx-auto mt-8 opacity-95">
