--- a/html/services.html
+++ b/html/services.html
@@ -141,7 +141,7 @@
 
 
    <section class="mt-16 text-gray-600 bg-gray-100 md:mt-24 ">
-  <div class="mx-auto max-w-6xl px-3 pt-8 pb-14 xl:pb-22 md:px-4 ">
+  <div class="mx-auto max-w-6xl px-2 pt-8 pb-14 xl:pb-22 md:px-4 ">
     <div class="px-3">
 
         <h2 class="text-3xl  font-extrabold font-montserrat tracking-tight  md:text-5xl">
@@ -158,7 +158,7 @@
 
 
         <!-- colonne expertise  -->
- <div id="expertise" class="bg-bg-gray-p p-5 rounded-md ">
+ <div id="expertise" class="bg-bg-gray-p  p-3 rounded-md md:p-5 ">
         <div class="relative">
           <img src="../images/brush.png" class="absolute   -left-2 opacity-70 " alt="coup de pinceau">
           <h3 class="font-lato text-2xl italic  text-main-red md:text-3xl ">Expertise judiciaire</h3>
