--- a/html/services.html
+++ b/html/services.html
@@ -198,7 +198,7 @@ Il est notamment possible de développer des modèles de <b>répartition des res
  <div class="hidden  md:block border-l-4 border-dotted border-gray-300 h-5/6 my-auto "></div>
 
  <!-- colonne ingenierie -->
-       <div id="ingenierie" class="bg-bg-gray-p p-5 rounded-md  ">
+       <div id="ingenierie" class="bg-bg-gray-p p-3  rounded-md md:p-5 ">
         <div class="relative">
             <img src="../images/brush.png" class="absolute z-40 -left-2 opacity-70 " alt="coup de pinceau">
             <h3 class="font-lato text-2xl italic  text-main-red md:text-3xl">Ingénierie-conseil</h3>
