--- a/html/contact.html
+++ b/html/contact.html
@@ -157,7 +157,7 @@
                     <img src="../images/contact/fred-gillet.jpg" class="border-8  border-gray-100 " alt="frédéric gillet">
                     
                 </div>
-                <div class="hidden md:block border-l-4 border-dotted border-gray-300 h-2/3"></div>
+                <div class="hidden md:block border-l-4 border-dotted border-gray-300 h-full"></div>
                 <div class="relative flex items-center">
                     <img src="../images/petit-logo-cimes-conseil.png" class="absolute inset-0  opacity-50 h-full w-2/3 " alt="logo du site">
                     <div class="relative z-10 mx-auto ">
