--- a/html/contact.html
+++ b/html/contact.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="hidden md:block border-l-4 border-dotted border-gray-300 h-full"></div>
                 <div class="relative flex items-center">
-                    <img src="../images/petit-logo-cimes-conseil.png" class="absolute inset-0 translate-y-8 translate-x-20 right-0  opacity-50 h-full w-full " alt="logo du site">
+                    <img src="../images/petit-logo-cimes-conseil.png" class="hidden absolute inset-0 translate-y-8 translate-x-20 right-0  opacity-50 h-full w-full md:block " alt="logo du site">
                     <div class="relative z-10 mx-auto ">
 
                         <p class="block font font-montserrat text-4xl text-center tracking-wide font-bold text-gray-700 md:text-left "> Frédéric GILLET</p>
@@ -167,7 +167,7 @@
                             <img src="../images/contact/balance-balance.png" class="w-10 h-10 mr-1 hidden md:block" alt="îcone de balance / justice">
                             <span>Expert près de la Cour d’Appel de Chambéry</span> </p>
                          <hr class="w-[50px] h-[4px] bg-gray-700 mt-5 mx-auto" />
-                            <ul class=" leading-loose ml-5 font-semibold mt-5">
+                            <ul class=" leading-loose mx-auto  font-semibold mt-5 md:ml-5">
                         <li >
                            
                         </li>
