--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <section class="mt-14 text-gray-600  ">
   <div class="mx-auto max-w-6xl px-2 pt-6 pb-14 xl:pb-22 md:px-6 ">
             <div class="relative flex ">
-                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute sm:text-left">" Notre mission, vous accompagnez "</h3>
+                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute sm:text-left sm:text-3xl">Notre mission, vous accompagnez</h3>
                   <img 
                     src="./images/brush-blue.svg" 
                     class=" hidden absolute  -left-4 h-min-[45px] opacity-70 sm:block"
@@ -350,7 +350,7 @@
 <section class="mt-12 text-gray-600  ">
   <div class="mx-auto max-w-6xl px-6  pt-6 pb-14 xl:pb-22  ">
          <div class="relative flex ">
-                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-red absolute sm:text-left">Nos spécialisations</h3>
+                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-red absolute sm:text-left sm:text-3xl">Nos spécialisations</h3>
                   <img 
                     src="./images/brush-red-long.svg" 
                     class=" hidden absolute  -left-4 h-min-[45px] opacity-60 sm:block"
@@ -483,7 +483,7 @@
 <section class="mt-12 text-gray-600 bg-gray-100 ">
   <div class="mx-auto max-w-6xl px-2 pt-10 pb-14 xl:pb-22 md:px-6 ">
             <div class="relative flex ">
-                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute sm:text-left">" Notre engagement "</h3>
+                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute sm:text-left sm:text-3xl"> Notre engagement</h3>
                   <img 
                     src="./images/brush-blue.svg" 
                     class=" hidden absolute  -left-4 h-min-[45px] opacity-70 sm:block"
