--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
 <section class="mt-14 text-gray-600  ">
   <div class="mx-auto max-w-6xl px-2 pt-6 pb-14 xl:pb-22 md:px-6 ">
             <div class="relative flex ">
-                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute sm:text-left sm:text-3xl">Notre mission, vous accompagnez</h3>
+                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute sm:text-3xl">Notre mission, vous accompagnez</h3>
                   <img 
                     src="./images/brush-blue.svg" 
-                    class=" hidden absolute  -left-4 h-min-[45px] opacity-70 sm:block"
+                    class=" hidden absolute  translate-x-1/2 h-min-[45px] opacity-70 sm:block"
                     alt="Trait de pinceau bleu" />
 
             </div>
@@ -483,10 +483,10 @@
 <section class="mt-12 text-gray-600 bg-gray-100 ">
   <div class="mx-auto max-w-6xl px-2 pt-10 pb-14 xl:pb-22 md:px-6 ">
             <div class="relative flex ">
-                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute sm:text-left sm:text-3xl"> Notre engagement</h3>
+                  <h3 class="font-lato text-2xl italic  w-full text-center text-main-blue absolute  sm:text-3xl"> Notre engagement</h3>
                   <img 
                     src="./images/brush-blue.svg" 
-                    class=" hidden absolute  -left-4 h-min-[45px] opacity-70 sm:block"
+                    class=" hidden absolute  translate-x-1/2 h-min-[45px] opacity-70 sm:block"
                     alt="Trait de pinceau bleu" />
 
             </div>
