--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <p class="mt-6 relative z-20">
                 <b>Implanté en Savoie</b>, le cabinet est expérimenté dans les projets et opérations en territoires de montagne. Les prestations sont calibrées aux besoins du client dans des démarches pragmatiques et orientées solutions.
             </p >
-           <h2 class="absolute hidden  text-2xl text-main-red italic opacity-80 -bottom-24 left-20 text-center  xl:block">" Cabinet implanté en Savoie<br> depuis 20 ans "</h2>
+           <h2 class="absolute hidden  text-2xl  italic opacity-80 -bottom-24 left-20 text-center  xl:block">" Cabinet implanté en Savoie<br> depuis 20 ans "</h2>
         </div>
       </div>
     </div> 
