--- a/html/contact.html
+++ b/html/contact.html
@@ -162,11 +162,11 @@
                     <img src="../images/petit-logo-cimes-conseil.png" class="hidden absolute inset-0 translate-y-3/4   opacity-40 h-full w-full md:block " alt="logo du site">
                     <div class="relative z-10 mx-auto ">
 
-                        <p class="block font font-montserrat text-5xl text-center  font-bold text-gray-700 md:text-left "> Frédéric GILLET</p>
-                        <p class=" text-2xl mt-5 text-center text-line-cooper-hero-footer italic font-medium md:whitespace-nowrap md:text-left">
+                        <p class="block font font-montserrat text-4xl text-center  font-bold text-gray-700 md:text-left md:text-5xl "> Frédéric GILLET</p>
+                        <p class=" text-xl mt-5 text-center text-line-cooper-hero-footer italic font-medium md:whitespace-nowrap md:text-left md:text-2xl">
                             <!-- <img src="../images/contact/balance-balance.png" class="w-10 h-10 mr-1 hidden md:block" alt="îcone de balance / justice"> -->
                             <span>Expert près de la Cour d’Appel de CHAMBÉRY</span> </p>
-                            <p class=" text-2xl mt-3 text-center text-line-cooper-hero-footer italic font-medium md:whitespace-nowrap md:text-left">
+                            <p class=" text-xl mt-3 text-center text-line-cooper-hero-footer italic font-medium md:whitespace-nowrap md:text-left md:text-2xl">
                             <!-- <img src="../images/contact/balance-balance.png" class="w-10 h-10 mr-1 hidden md:block" alt="îcone de balance / justice"> -->
                             <span>Expert près de la Cour d’Appel de LYON</span> </p>
                          <hr class="w-[50px] h-[4px] bg-gray-700 mt-5 mx-auto" />
