--- a/html/contact.html
+++ b/html/contact.html
@@ -168,7 +168,7 @@
                             <span>Expert près de la Cour d’Appel de CHAMBÉRY</span> </p>
                             <p class=" text-xl mt-3 text-center text-line-cooper-hero-footer italic font-medium md:whitespace-nowrap md:text-left md:text-2xl">
                             <!-- <img src="../images/contact/balance-balance.png" class="w-10 h-10 mr-1 hidden md:block" alt="îcone de balance / justice"> -->
-                            <span>Expert près de la Cour d’Appel de LYON</span> </p>
+                            <span>Expert près de la Cour d’Appel Adm de LYON</span> </p>
                          <hr class="w-[50px] h-[4px] bg-gray-700 mt-5 mx-auto" />
 
                           <p class="font-medium text-justify leading-loose mt-6">
